# fen

./: .gitignore  Cargo.toml  buildServer.json  changelog.md  justfile
.github/workflows/: unit-tests.yml
cli/: Cargo.toml
cli/fen/: Cargo.toml
cli/fen/src/: interface.rs  main.rs  print.rs  routes.rs
cli/fen/src/codegen/client/swift/: mod.rs
cli/fen/src/codegen/client/swift/templates/: Api.swift  ApiClient.swift  Fetcher.swift
cli/new-parser/: Cargo.toml
cli/new-parser/src/: ast.rs  lexer.rs  lib.rs  tokens.rs
cli/parser/: Cargo.toml
cli/parser/src/: ast.rs  lexer.rs  lib.rs  tokens.rs
cli/parser/src/codegen/: mod.rs
cli/src/codegen/: mod.rs
cli/src/codegen/client/swift/: mod.rs
cli/src/codegen/server/rust/: mod.rs
cli/src/config/: mod.rs  verification.rs
client/ts/: ApiClient.ts  README.md  bun.lockb  index.ts  package.json
client/ts/src/: ApiClient.ts
demos/solid-hono/: README.md  bun.lockb  package.json
demos/solid-hono/api/: package.json
demos/solid-hono/api/src/: index.ts
demos/solid-hono/fen/: GetTodos.fen
demos/solid-hono/frontend/: bun.lockb  package.json
demos/solid-hono/frontend/src/: entry-client.tsx
demos/solid-hono/frontend/src/components/: Button.tsx
demos/solid-hono/frontend/src/lib/: api.ts
demos/solid-hono/frontend/src/routes/: index.tsx
demos/swiftui-axum/Todos/Todos/: ContentView.swift  TodosApp.swift
demos/swiftui-axum/Todos/Todos.xcodeproj/: project.pbxproj
demos/swiftui-axum/Todos/Todos/ViewModels/: TodoListModel.swift
demos/swiftui-axum/Todos/Todos/Views/: TodoCard.swift  (+1 more)
demos/swiftui-axum/Todos/TodosTests/: TodosTests.swift
demos/swiftui-axum/Todos/TodosUITests/: TodosUITests.swift  TodosUITestsLaunchTests.swift
demos/swiftui-axum/fen/: GetTodos.fen  ToggleTodoCompletion.fen  config.toml
fen_cli/: Cargo.toml  changelog.md
fen_cli/src/: interface.rs  routes.rs
fen_cli/src/codegen/client/swift/: mod.rs
fen_cli/src/codegen/client/swift/templates/: Api.swift
fen_cli/src/codegen/server/rust/: mod.rs
fen_lsp/: Cargo.toml
fen_lsp/src/: main.rs
fen_parser/: Cargo.toml  README.md
fen_parser/src/: lexer.rs  lib.rs
fen_parser/src/codegen/: mod.rs
integration-tests/client/SwiftClient/: Package.swift
integration-tests/fen/: 00_Ints.fen  01_Strings.fen  02_Bools.fen  03_Floats.fen  04_UUIDs.fen  05_Dates.fen  06_Arrays.fen  07_Optionals.fen  08_CompoundArraysAndOptionals.fen  09_BasicStructs.fen  10_StructsWithCompoundTypes.fen  11_NestedStructs.fen  12_BasicEnums.fen  13_EnumsWithAssociatedValues.fen  14_ComposingStructsAndEnums.fen  15_ArrayOfStructsWithDate.fen  config.toml
integration-tests/server/rust_server/: Cargo.toml
integration-tests/server/rust_server/src/: main.rs
integration-tests/server/rust_server/src/types/: array_of_structs_with_date_test.rs  arrays_test.rs  basic_enums_test.rs  basic_structs_test.rs  bools_test.rs  composing_structs_and_enums_test.rs  compound_arrays_and_optionals_test.rs  dates_test.rs  enums_with_associated_values_test.rs  floats_test.rs  ints_test.rs  mod.rs  nested_structs_test.rs  optionals_test.rs  strings_test.rs  structs_with_compound_types_test.rs  uuids_test.rs
parser/: Cargo.toml
parser/src/: ast.rs  lexer.rs  lib.rs
parser/src/codegen/: mod.rs  name_transforms.rs
tree-sitter-fen/: CMakeLists.txt  Cargo.toml  Makefile  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  tree-sitter.json
tree-sitter-fen/bindings/go/: binding_test.go
tree-sitter-fen/bindings/python/tree_sitter_fen/: __init__.py
tree-sitter-fen/src/: grammar.json  parser.c
(+27 files in other folders)
