[package]
name = "fen_cli"
version = "0.5.2"
description = "The command line interface for Fen"
edition = "2021"
repository = "https://github.com/kiahjh/fen"
categories = ["command-line-utilities", "development-tools::ffi"]
keywords = ["schema", "type-safety", "codegen", "ffi"]
license = "MIT"
readme = "README.md"

[[bin]]
name = "fen"
path = "src/main.rs"

[lints.clippy]
pedantic = "warn"
nursery = "warn"
perf = "warn"
correctness = "warn"
suspicious = "warn"
style = "warn"
complexity = "warn"
cargo = "warn"

[dependencies]
chrono = "0.4.39"
colored = "2.2.0"
serde = "1.0.217"
serde_json = "1.0.134"
toml = "0.8.19"
fen_parser = { path = "../fen_parser", version = "0.5.2" }
