[package]
name = "fen_lsp"
version = "0.1.0"
description = "LSP for Fen"
edition = "2021"
repository = "https://github.com/kiahjh/fen"
categories = ["command-line-utilities", "development-tools::ffi"]
keywords = ["schema", "type-safety", "codegen", "ffi", "http", "api", "multi-language"]
license = "MIT"
readme = "README.md"

[lints.clippy]
pedantic = "warn"
nursery = "warn"
perf = "warn"
correctness = "warn"
suspicious = "warn"
style = "warn"
complexity = "warn"
cargo = "warn"

[dependencies]
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread", "io-std"] }
tower-lsp = "0.20.0"
