[package]
name = "fen_parser"
version = "0.5.2"
description = "A parser for Fen"
edition = "2021"
repository = "https://github.com/kiahjh/fen"
categories = ["parser-implementations", "development-tools::ffi"]
keywords = ["schema", "type-safety", "codegen", "ffi"]
license = "MIT"
readme = "README.md"

[lints.clippy]
pedantic = "warn"
nursery = "warn"
perf = "warn"
correctness = "warn"
suspicious = "warn"
style = "warn"
complexity = "warn"
cargo = "warn"

[dependencies]
pretty_assertions = "1.4.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
