[package]
name = "parser"
version = "0.1.0"
description = "A parser for Fen"
edition = "2021"
repository = "https://github.com/kiahjh/fen"
categories = ["parser-implementations", "development-tools::ffi"]
keywords = ["schema", "type-safety", "codegen", "ffi", "http", "api", "multi-language"]
license = "MIT"
readme = "README.md"

[lints.clippy]
pedantic = "warn"
nursery = "warn"
perf = "warn"
correctness = "warn"
suspicious = "warn"
style = "warn"
complexity = "warn"
cargo = "warn"
