[package]
name = "rust_server"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0.138"
serde = { version = "1.0.216", features = ["derive"] }
uuid = { version = "1.11.0", features = ["v4", "serde"] }
chrono = { version = "0.4.39", features = ["serde"] }
pretty_assertions = "1.4.1"
